test/syntax-errors/instruction6.sos
# instruction il manque then

if test 2 != 3 
id = 8
fi